@@ -1,19 +1,19 @@
-FROM maven:3.6-openjdk-15 as builder
+FROM springci/spring-native:java17-0.11.x as builder
 
-WORKDIR /app
+WORKDIR /app/
 
 COPY GesetzeAPI-application/src ./src/
 COPY GesetzeAPI-application/pom.xml ./
 
 # Build a release artifact.
-RUN mvn package -DskipTests
+RUN mvn package -Pnative -DskipTests
 
-FROM openjdk:15
+FROM oraclelinux:8-slim
 
 # Copy the jar to the production image from the builder stage.
-COPY --from=builder /app/target/GesetzeAPI.jar /prod/GesetzeAPI.jar
+COPY --from=builder "/app/target/gesetzeapi-application" "/prod/gesetzeapi-application"
 ADD GesetzeAPI-application/laws /prod/laws
 
 EXPOSE 80
 
-CMD ["java","-Djava.security.egd=file:/dev/./urandom", "-jar", "--enable-preview", "/prod/GesetzeAPI.jar"]
+CMD ["sh", "-c", "/prod/gesetzeapi-application" ]
